docs: recreate README.md and guide.md matching mandatory guidelines