@@ -1,351 +1,224 @@
-# AlgoBuddy - Algorithm Visualizer
+<p align="center">
+  <img src="src/main/resources/logo.png" width="150" alt="AlgoBuddy Logo"/>
+</p>
+<h1 align="center">AlgoBuddy: Your Offline Algorithm Playground</h1>
+<p align="center">
+  <strong>Interactive algorithm visualizer and code sandbox that runs fully local</strong><br/>
+  <em>Select an algorithm → watch step-by-step playback → write and execute C/C++/Java/Python code in the sandbox</em>
+</p>
 
-<div align="center">
-
-![AlgoBuddy Logo](src/main/resources/Logo.png)
-
-**An interactive desktop application for visualizing computer science algorithms**
-
-[![Java](https://img.shields.io/badge/Java-11+-orange.svg)](https://www.oracle.com/java/)
-[![JavaFX](https://img.shields.io/badge/JavaFX-17.0.2-blue.svg)](https://openjfx.io/)
-[![Maven](https://img.shields.io/badge/Maven-3.6+-red.svg)](https://maven.apache.org/)
-[![License](https://img.shields.io/badge/License-MIT-green.svg)](LICENSE)
-
-</div>
-
----
-
-## 📖 About
-
-**AlgoBuddy** is an educational tool designed to help students, educators, and programming enthusiasts understand how algorithms work through interactive visualizations. Watch algorithms execute step-by-step, control playback speed, and see exactly how data structures change during execution.
-
-### Supported Algorithm Categories
-
-- **🔍 Searching Algorithms**: Binary Search, Linear Search, Jump Search
-- **📊 Sorting Algorithms**: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, Heap Sort
-- **🌳 Graph Algorithms**: BFS, DFS, Dijkstra's Algorithm, Prim's Algorithm, Kruskal's Algorithm
-- **🧩 Puzzle Solvers**: N-Queens, Sudoku, Maze Generation and Solving
-- **🔗 Pathfinding**: A* Search, Best-First Search
+<p align="center">
+  <img src="https://img.shields.io/badge/platform-Windows-0078D6?style=flat-square&logo=windows&logoColor=white" alt="Windows" />
+  <img src="https://img.shields.io/badge/Java-11+-orange?style=flat-square&logo=java&logoColor=white" alt="Java" />
+  <img src="https://img.shields.io/badge/UI-JavaFX_17-blue?style=flat-square" alt="JavaFX" />
+  <img src="https://img.shields.io/badge/Editor-RichTextFX-informational?style=flat-square" alt="RichTextFX" />
+  <img src="https://img.shields.io/badge/license-MIT-green?style=flat-square" alt="License" />
+</p>
 
 ---
 
-## ✨ Features
+## Table of Contents
 
-- **🎬 Step-by-Step Visualization**: Watch algorithms execute one step at a time
-- **⏯️ Playback Controls**: Play, Pause, Step Forward, Step Backward
-- **⚡ Adjustable Speed**: Control animation speed with an intuitive slider
-- **📊 Multiple Visualizations**: Bar charts, arrays, graphs, grids, and chessboards
-- **📝 Variable Tracking**: Monitor algorithm variables in real-time
-- **💻 Code Display**: View algorithm pseudocode alongside visualization
-- **🎨 Clean UI**: Modern JavaFX interface with intuitive controls
-- **📦 Standalone Executable**: Includes embedded JRE—no Java installation required
+- 🔍 [Overview](#overview)
+- 🎯 [Why AlgoBuddy?](#why-algobuddy)
+- ✨ [Features](#features)
+- 🏗 [Architecture](#architecture)
+- 🔄 [Execution Workflow and How It Works](#execution-workflow-and-how-it-works)
+- 🎨 [UI Guide](#ui-guide)
+  - [Dashboard](#dashboard)
+  - [Algorithm Visualizer Pane](#algorithm-visualizer-pane)
+  - [Interactive Sandbox Console](#interactive-sandbox-console)
+  - [Setup Wizard Installer](#setup-wizard-installer)
+- 🚀 [Launch Instructions](#launch-instructions)
+  - [Running from Source](#running-from-source)
+  - [Release Standalone EXE](#release-standalone-exe)
+- 📁 [Project Structure and Key Components](#project-structure-and-key-components)
+- ⚠️ [Troubleshooting and Failsafes](#troubleshooting-and-failsafes)
+- 👤 [Author](#author)
 
 ---
 
-## 🚀 Quick Start
+## Overview
 
-### Prerequisites
+**AlgoBuddy** is a premium, offline desktop application designed to bridge the gap between abstract computer science concepts and concrete execution. It functions as both a step-by-step visual debugger for algorithms and an interactive code compilation sandbox.
 
-- **Java Development Kit (JDK) 11 or higher** - [Download here](https://www.oracle.com/java/technologies/javase-downloads.html)
-- **Apache Maven 3.6+** - [Download here](https://maven.apache.org/download.cgi)
+Watch algorithms execute visually, inspect step-by-step state changes, step backwards/forwards in execution time, and compile your own custom code in **Java, C, C++, or Python** using fully local, bundled compiler runtimes.
+
+---
+
+## Why AlgoBuddy?
+
+> **Traditional algorithm visualizers show static animations of hardcoded logic. AlgoBuddy runs your actual code and compiles custom source scripts, offline.**
+
+| Feature | Traditional Web Visualizers (e.g. VisuAlgo) | AlgoBuddy |
+|---|---|---|
+| **Code Execution** | Static pseudocode line highlighting only | Compiles & executes custom C/C++/Java/Python source code |
+| **Console Sandbox** | None | Interactive stdin/stdout console with yellow blinking prompt |
+| **Offline Portability** | Requires active internet access | 100% offline—bundles or downloads local compiler runtimes |
+| **Playback Control** | Forward only or simple speed adjustment | Forward, Backward (state restore snapshots), Play/Pause, speed slider |
+| **Windows Launcher** | None (browser-based only) | Standalone Launch4j EXE wrapping shaded JAR with embedded JRE |
+
+---
+
+## Features
+
+### 🎬 Step-by-Step Algorithm Visualization
+* **Granular Playback**: Play, Pause, Step-Forward, and Step-Backward using state snapshot restore.
+* **Variable Tracker**: Inspect stack states, variables, index pointers, and structural metrics in real-time.
+* **Adaptive Speed**: Intuitive speed slider to control execution delays dynamically.
+* **Rich Animations**: Highlight nodes, pulse edges, shake cycles, and emphasize changes on canvas.
+
+### 💻 Code Compilation Sandbox
+* **Offline Compilers**: Bundle-ready local toolchains for GCC (MinGW), JDK (Java), and Python.
+* **Interactive Console**: Supports interactive `stdin` inputs using a thread-safe blocking queue.
+* **Syntax Highlighting**: Powered by RichTextFX with dynamic token color schemes.
+* **Compiler Path Resolution**: Dynamic parent-directory search (up to depth 5) that automatically prepends `bin/` folders to environment `PATH` to resolve GCC sub-process assembler (`as.exe`) errors.
+
+---
+
+## Architecture
+
+AlgoBuddy is structured using a strict **Model-View-Controller-Renderer (MVCR)** architecture:
+
+```mermaid
+graph TD
+    Main[Main.java Application Entry] -->|Launches| Splash[SplashView Video Player]
+    Splash -->|Instant Transition| Loader{Execution Environment Check}
+    Loader -->|Missing Runtimes| Installer[EnvInstaller Setup Wizard]
+    Loader -->|Runtimes Found| Dash[Main Dashboard View]
+    
+    Dash -->|Select Algorithm| AlgView[AlgorithmViewController Template]
+    AlgView -->|Coordinates| Solver[Algorithm Step-Solver]
+    AlgView -->|Renders State| Visual[Canvas/Pane Renderer]
+    
+    Dash -->|Code Sandbox Playground| Editor[RichTextFX Code Editor]
+    Editor -->|Executes Code| Executor[CodeExecutor Temp Sandbox]
+    Executor -->|Prepend Bin Path| PATH[Process Environment PATH]
+    PATH -->|Interactive Console Stdin/Stdout| StdinQueue[InteractiveConsolePane Queue]
+```
+
+<details>
+<summary>ASCII fallback (click to expand)</summary>
+
+```text
+               [Main.java Application Entry]
+                             │
+                         (Launches)
+                             ▼
+                 [SplashView Video Player]
+                             │
+                    (Instant Transition)
+                             ▼
+             {Execution Environment Check}
+                  /                     \
+          (Missing Runtimes)       (Runtimes Found)
+                /                         \
+               ▼                           ▼
+    [EnvInstaller Setup Wizard]     [Main Dashboard View]
+                                      /           \
+                           (Select Alg)          (Run Code Sandbox)
+                                  /                     \
+                                 ▼                       ▼
+                   [AlgorithmViewController]     [RichTextFX Code Editor]
+                          /         \                    │
+                     (Solver)     (Canvas)          (Executes Code)
+                        /             \                  ▼
+             [Algorithm Solver]  [Visual Renderer]  [CodeExecutor Temp Sandbox]
+                                                         │
+                                                 (Prepend bin to PATH)
+                                                         ▼
+                                                [Interactive Console]
+```
+</details>
+
+---
+
+## Execution Workflow and How It Works
+
+1. **Startup**: The application launches, instantly showing the `SplashView` video animation running at `1.5x` speed.
+2. **Environment Scan**: `ExecutionEnvironment` performs a quick local path query. If local runtimes are missing, the `EnvInstaller` setup wizard pops up to let users download runtimes.
+3. **Dashboard / Visualizer Selection**: The user selects an algorithm from the category grid.
+4. **Playback Thread Loop**: The `AlgorithmViewController` manages a timeline callback. At each tick, it asks the solver to `step()` once, updates variables, and commands the canvas renderer to draw the current frame.
+5. **Snapshot Save/Restore**: To support stepping backwards, each `step()` call takes a clone `snapshot()` of all solver state variables. If the user steps back, the controller restores the solver to a previous state frame.
+
+---
+
+## UI Guide
+
+### Dashboard
+The gateway screen containing a category grid (Searching, Sorting, Graphs, Dynamic Programming, Puzzles, etc.) with a live-filtering search bar.
+
+### Algorithm Visualizer Pane
+The main visualization panel holding the animation canvas, pseudocode sidebar, playback buttons, variable tracking table, and speed slider.
+
+### Interactive Sandbox Console
+A split-screen layout featuring a code editor with line numbers and syntax highlighting alongside a live stdin/stdout terminal panel.
+
+### Setup Wizard Installer
+A package downloader wizard with progress bars showing compiler extraction status for GCC (MinGW), Java JDK, and Python.
+
+---
+
+## Launch Instructions
 
 ### Running from Source
 
-#### Windows
-```bash
-run.bat
-```
+#### Prerequisites
+* **Java Development Kit (JDK) 11** or higher.
+* **Apache Maven 3.6+**.
 
-#### Linux/Mac
+#### Running Console Commands
 ```bash
-chmod +x run.sh
-./run.sh
-```
-
-### Using Maven Directly
-
-```bash
-# Compile the project
+# Compile and run JavaFX application
 mvn clean compile
-
-# Run the application
 mvn javafx:run
 ```
 
-### Running the Executable (Windows Only)
+### Release Standalone EXE
+To launch the packaged release version:
+1. Double-click the compiled `AlgoBuddy.exe`.
+2. The executable runs with its own embedded JRE—no Java installation required!
 
-If you have the pre-built `AlgoBuddy.exe`:
-1. Double-click `AlgoBuddy.exe`
-2. No Java installation required—JRE is embedded!
-
----
-
-## 🏗️ Building from Source
-
-### Build JAR File
-
-```bash
-# Standard JAR (requires JavaFX on system)
-mvn clean package
-
-# Shaded JAR (includes all dependencies)
-mvn clean package
-```
-
-Output: `target/algorithm-visualizer-1.0.0.jar`
-
-### Create Windows Executable
-
-1. **Build the shaded JAR**:
-   ```bash
-   mvn clean package
-   ```
-
-2. **Use Launch4j**:
-   - Install [Launch4j](http://launch4j.sourceforge.net/)
-   - Open `algobuddy.xml` in Launch4j
-   - Click "Build wrapper" to generate `AlgoBuddy.exe`
-
-3. **Package for distribution**:
-   - Include `AlgoBuddy.exe`
-   - Include `jre/` directory (embedded JRE)
-   - Include `openjfx-21.0.7_windows-x64_bin-sdk/` (JavaFX SDK)
+*Launch4j configurations can be modified locally in `algobuddy.xml`.*
 
 ---
 
-## 🎮 How to Use
+## Project Structure and Key Components
 
-### 1. Select an Algorithm
-- Launch the application
-- Browse the algorithm list by category
-- Click on an algorithm to open its visualization
-
-### 2. Configure Parameters
-- Set input size, target values, or other algorithm-specific parameters
-- Click **"Generate"** or **"Start"** to initialize
-
-### 3. Control Playback
-- **▶️ Play**: Auto-advance through algorithm steps
-- **⏸️ Pause**: Pause automatic playback
-- **⏭️ Step**: Advance one step forward
-- **⏮️ Step Back**: Go back one step
-- **🔄 Reset**: Return to initial state
-
-### 4. Adjust Speed
-- Use the speed slider to control animation speed
-- Slower speeds help understand complex operations
-- Faster speeds good for observing overall behavior
-
-### 5. Monitor Execution
-- **Visualization Area**: Watch the algorithm in action
-- **Progress Log**: Read textual descriptions of each step
-- **Variable List**: Track variable values during execution
-- **Code Display**: View the algorithm's pseudocode
+| Path | Purpose |
+|---|---|
+| `src/main/java/com/algorithmvisualizer/Main.java` | App entry point and window manager |
+| `src/main/java/com/algorithmvisualizer/execution/ExecutionEnvironment.java` | Scans local folders for compiler runtimes |
+| `src/main/java/com/algorithmvisualizer/execution/CodeExecutor.java` | Sandboxes compilation & routes subprocess paths |
+| `src/main/java/com/algorithmvisualizer/ui/MainController.java` | Category selection dashboard controller |
+| `src/main/java/com/algorithmvisualizer/ui/AlgorithmViewController.java` | Central template for visualizers and playback controls |
+| `src/main/java/com/algorithmvisualizer/ui/SplashView.java` | Manages 1.5x sped-up video logo reveal |
+| `src/main/java/com/algorithmvisualizer/ui/EnvInstallerController.java` | Setup wizard downloader for compilers |
+| `src/main/resources/fxml/` | FXML layout views for all panels |
+| `src/main/resources/css/style.css` | Premium styling stylesheets and dark-mode tokens |
 
 ---
 
-## 🏛️ Project Structure
+## Troubleshooting and Failsafes
 
-```
-algorithm-visualizer/
-├── src/main/
-│   ├── java/com/algorithmvisualizer/
-│   │   ├── Main.java                   # Application entry point
-│   │   ├── algorithm/                  # Algorithm implementations
-│   │   │   ├── BinarySearchSolver.java
-│   │   │   ├── BubbleSortSolver.java
-│   │   │   ├── DFSSolver.java
-│   │   │   └── ...
-│   │   ├── model/                      # Algorithm metadata
-│   │   │   ├── Algorithm.java          # Abstract base class
-│   │   │   ├── BinarySearchAlgorithm.java
-│   │   │   └── ...
-│   │   ├── ui/                         # UI controllers
-│   │   │   ├── MainController.java
-│   │   │   ├── AlgorithmViewController.java
-│   │   │   └── ...
-│   │   └── visualization/              # Renderers
-│   │       ├── BarChartRenderer.java
-│   │       ├── GraphRenderer.java
-│   │       └── ...
-│   └── resources/
-│       ├── fxml/                       # UI layouts
-│       │   ├── main-view.fxml
-│       │   ├── algorithm-view-new.fxml
-│       │   └── ...
-│       └── Logo.png
-├── jre/                                # Embedded JRE (for distribution)
-├── openjfx-21.0.7_windows-x64_bin-sdk/ # JavaFX SDK (for distribution)
-├── pom.xml                             # Maven configuration
-├── algobuddy.xml                       # Launch4j configuration
-├── run.bat                             # Windows run script
-├── run.sh                              # Unix/Linux run script
-└── README.md                           # This file
-```
+| Expected Error | Cause | Solution |
+|---|---|---|
+| `CreateProcess: No such file or directory` (GCC `as` error) | GCC assembler (`as.exe`) missing from environment search path | Handled dynamically by `CodeExecutor` automatically prepending the compiler's `bin/` folder to the runtime process environment `PATH`. |
+| `IllegalAccessError` in splash video | `javafx.media` module missing from JRE module path | Fixed in `algobuddy.xml` by adding `javafx.media` to the `--add-modules` Launch4j compiler options. |
+| `ZipException` during installation | ZIP extraction fails due to central directory header mismatches | Resolved by using random-access `ZipFile` parser instead of sequential `ZipInputStream`. |
+| Missing local runtimes | Runtimes not downloaded or placed in directory root | Run the built-in Setup Wizard installer to download and unpack compilers automatically. |
+
+### Failsafes
+* **Code Execution Sandbox**: Limits running processes to a maximum 10-second timeout to prevent infinite loops.
+* **Codec Fallback**: If media engines or codecs are missing, the splash view catches exceptions and falls back to loading the dashboard immediately.
 
 ---
 
-## 🛠️ Technology Stack
+## Author
 
-- **Language**: Java 11
-- **UI Framework**: JavaFX 17.0.2
-- **Build Tool**: Apache Maven
-- **Packaging**: Launch4j (Windows executable creation)
-- **Architecture**: Model-View-Controller (MVC)
+<p align="center">
+  <strong>Felix Au</strong><br/>
+  <a href="https://github.com/Felix-au">GitHub Profile</a> | <a href="mailto:felix.au@example.com">Email Address</a>
+</p>
 
----
-
-## 🤝 Contributing
-
-We welcome contributions! Whether it's adding new algorithms, improving visualizations, or fixing bugs, your help is appreciated.
-
-### Adding a New Algorithm
-
-1. **Create Algorithm Model** (`model/[Name]Algorithm.java`):
-   ```java
-   public class NewAlgorithm extends Algorithm {
-       public NewAlgorithm() {
-           super("Algorithm Name", "Description", Category.SORTING);
-       }
-       
-       @Override
-       public String getVisualizationFxml() {
-           return "/fxml/newalgorithm-view.fxml";
-       }
-       
-       @Override
-       public Class<?> getControllerClass() {
-           return NewAlgorithmController.class;
-       }
-   }
-   ```
-
-2. **Implement Algorithm Logic** (`algorithm/[Name]Solver.java`):
-   ```java
-   public class NewAlgorithmSolver {
-       public List<StepData> solve(Parameters params) {
-           // Your algorithm implementation
-       }
-   }
-   ```
-
-3. **Create Controller** (`ui/[Name]Controller.java`):
-   - Implement `AlgorithmViewController.AlgorithmSpecificController`
-   - Handle parameter input and visualization updates
-
-4. **Create or Reuse Renderer** (`visualization/[Name]Renderer.java`):
-   - Render algorithm state to JavaFX Canvas or Pane
-
-5. **Create FXML View** (`resources/fxml/[name]-view.fxml`):
-   - Link to your controller
-
-6. **Register Algorithm**:
-   - Add to `MainController.getAlgorithms()` method
-
-For detailed contribution guidelines, see [AI_AGENT_ONBOARDING.md](AI_AGENT_ONBOARDING.md).
-
----
-
-## 📚 Documentation
-
-- **[AI Agent Onboarding Guide](AI_AGENT_ONBOARDING.md)**: Comprehensive developer documentation
-- **[JavaDoc](target/site/apidocs/)**: API documentation (generated via `mvn javadoc:javadoc`)
-
----
-
-## 🐛 Known Issues
-
-- No automated tests currently exist
-- Code display feature is not fully implemented for all algorithms
-- Step-back functionality may have issues with certain puzzle algorithms
-- Linux/Mac executable not available (currently Windows only via Launch4j)
-
----
-
-## 🗺️ Roadmap
-
-### Version 2.0 (Planned)
-- [ ] Add automated tests (JUnit)
-- [ ] Implement complete code display for all algorithms
-- [ ] Add dark mode theme
-- [ ] Export visualization as video/GIF
-- [ ] Linux and macOS native packages
-- [ ] Enhanced graph algorithm visualizations
-- [ ] Tutorial mode for beginners
-- [ ] Algorithm comparison mode
-
-### Future Enhancements
-- [ ] Dynamic programming visualizations
-- [ ] String matching algorithms
-- [ ] Tree traversal animations
-- [ ] Interactive parameter tuning
-- [ ] Performance metrics display
-- [ ] Multi-language support (i18n)
-- [ ] Web-based version
-
----
-
-## 🧪 Testing
-
-Currently, the project lacks automated tests. To test manually:
-
-1. **Run the application**: `mvn javafx:run`
-2. **Test each algorithm category**:
-   - Select an algorithm
-   - Configure parameters
-   - Verify visualization renders correctly
-   - Test all playback controls (Play, Pause, Step, Step Back, Reset)
-   - Adjust speed and verify responsiveness
-3. **Check edge cases**:
-   - Minimum input size
-   - Maximum input size
-   - Already sorted arrays (for sorting algorithms)
-   - Graph with cycles vs. acyclic graphs
-
----
-
-## 💡 Tips for Educators
-
-- **Start with Simple Algorithms**: Begin with Binary Search or Selection Sort
-- **Use Step-by-Step Mode**: Pause and discuss each step with students
-- **Vary Input Sizes**: Show how algorithm behavior changes with data size
-- **Compare Algorithms**: Demonstrate different approaches to the same problem
-- **Encourage Exploration**: Let students adjust parameters and observe results
-
----
-
-## 🙏 Acknowledgments
-
-- Built with ❤️ using [JavaFX](https://openjfx.io/)
-- Icons and UI inspired by modern design principles
-- Educational content based on standard computer science curriculum
-
----
-
-## 📄 License
-
-This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
-
----
-
-## 📧 Contact & Support
-
-- **Issues**: Report bugs or request features via [GitHub Issues](https://github.com/Felix-au/Algorithm-Visualizer/issues)
-- **Discussions**: Join conversations in [GitHub Discussions](https://github.com/Felix-au/Algorithm-Visualizer/discussions)
-- **Email**: [Your contact email]
-
----
-
-## 🌟 Star History
-
-If you find this project helpful, please consider giving it a ⭐ on GitHub!
-
----
-
-<div align="center">
-
-**Made with 🧠 for algorithm enthusiasts**
-
-[⬆ Back to Top](#algobuddy---algorithm-visualizer)
-
-</div>
+<p align="center"><sub>Interactive learning that brings code to life, offline.</sub></p>
